force-app/main/default/objects/CM_Backlog_Item__c/CM_Backlog_Item__c.object-meta.xml
<CustomObject>
    <description>This CM object contains the individual backlog development takss which make up each sprint. and are assigned to a developer.  Note that this is the main object in the Change Management application.</description>
    <label>Backlog Item</label>
    <nameField>
        <label>Backlog Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>