force-app/main/default/objects/CM_Backlog_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is doing the work on this backlog item?</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>