force-app/main/default/objects/CM_Backlog_Item__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boomi Technical Backlog</fullName>
            </value>
            <value>
                <fullName>Salesforce Operations</fullName>
            </value>
            <value>
                <fullName>Membership Project</fullName>
            </value>
            <value>
                <fullName>Enterprise Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>