force-app/main/default/objects/CM_Backlog_Item__c/fields/BackLog_ID__c.field-meta.xml
<CustomField>
    <fullName>BackLog_ID__c</fullName>
    <description>Auto-Number field for Backlog ID Numbers.</description>
    <displayFormat>BL-{000}</displayFormat>
    <label>BackLog ID</label>
    <type>AutoNumber</type>
</CustomField>