force-app/main/default/objects/CM_Backlog_Item__c/fields/Burn_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Burn_Hours_Remaining__c</fullName>
    <formula>IF(Burned_Hours__c &lt; Estimated_Hours__c, Estimated_Hours__c - Burned_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Burn Hours Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>