force-app/main/default/objects/CM_Backlog_Item__c/fields/Burned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Burned_Hours__c</fullName>
    <label>Dev Burned Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>