force-app/main/default/objects/CM_Backlog_Item__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <description>Each item will be ranked for by the CCB for these three items, and based on the score (how many are High) it moves the item up or down.  It would be a field used by the business only for this purpose.</description>
    <inlineHelpText>Impact based on:  Member Impact Low or Member Impact High (ML or MH), Business Impact Low or Business Impact High (BL or BH), and Employee Impact Low or Employee Impact High (EL or EH).</inlineHelpText>
    <label>Business Impact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>