force-app/main/default/objects/CM_Backlog_Item__c/fields/Business_Request__c.field-meta.xml
<CustomField>
    <fullName>Business_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Business Request that spawned this backlog item</inlineHelpText>
    <label>Business Request</label>
    <referenceTo>Business_Request__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>