force-app/main/default/objects/CM_Backlog_Item__c/fields/Component_Count__c.field-meta.xml
<CustomField>
    <fullName>Component_Count__c</fullName>
    <label>Component Count</label>
    <summaryForeignKey>CM_Component__c.Backlog_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>