force-app/main/default/objects/CM_Backlog_Item__c/fields/Days_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Days_Inactive__c</fullName>
    <description>Number of days since the last activity</description>
    <formula>NOW() -  LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Inactive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>