force-app/main/default/objects/CM_Backlog_Item__c/fields/Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Status__c</fullName>
    <inlineHelpText>The deployment status</inlineHelpText>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Deployed</fullName>
            </value>
            <value>
                <fullName>Deployed - In Use</fullName>
            </value>
            <value>
                <fullName>Deployed - Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>