force-app/main/default/objects/CM_Backlog_Item__c/fields/Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Developer_Notes__c</fullName>
    <description>Typically contains developer deploy steps to group Dev environment or other development pertinent data.  This field is not for the QA/UAT/PROD deploys.</description>
    <inlineHelpText>Typically contains developer deploy steps to group Dev environment or other development pertinent data.  This field is not for the QA/UAT/PROD deploys.</inlineHelpText>
    <label>Developer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>