force-app/main/default/objects/CM_Backlog_Item__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Backlog items are related to each feature.</description>
    <label>Feature</label>
    <referenceTo>CM_Feature__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>