force-app/main/default/objects/CM_Backlog_Item__c/fields/git_commit_command__c.field-meta.xml
<CustomField>
    <fullName>git_commit_command__c</fullName>
    <description>Shortcut to the git commit command</description>
    <formula>'git commit -m "' +  BackLog_ID__c + ' ' +  Name + '"'</formula>
    <label>git commit command</label>
    <type>Text</type>
</CustomField>