force-app/main/default/objects/CM_Backlog_Item__c/fields/How_To_Demo__c.field-meta.xml
<CustomField>
    <fullName>How_To_Demo__c</fullName>
    <description>Description of how to demonstrate the item.  
NOT how to smoke test.
NOT how to QA.</description>
    <inlineHelpText>Description of how to demonstrate the item.  
NOT how to smoke test.
NOT how to QA.
How to demonstrate.  This may include calling out specific user to use while demonstrating and specific environments.</inlineHelpText>
    <label>How To Demo</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>