force-app/main/default/objects/CM_Backlog_Item__c/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <formula>IF( Jira_Ticket_ID__c != NULL , 
HYPERLINK( "https://aaancnu.atlassian.net/browse/" + Jira_Ticket_ID__c, "Jira Link"), "")</formula>
    <label>Jira Link</label>
    <type>Text</type>
</CustomField>