force-app/main/default/objects/CM_Backlog_Item__c/fields/Jira_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_ID__c</fullName>
    <inlineHelpText>The Jira Ticket Id. Example: "MP-4013"</inlineHelpText>
    <label>Jira Ticket ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>