force-app/main/default/objects/CM_Backlog_Item__c/fields/Known_Problems__c.field-meta.xml
<CustomField>
    <fullName>Known_Problems__c</fullName>
    <label>Known Problems</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>