force-app/main/default/objects/CM_Backlog_Item__c/fields/Lead_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Lead_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Backlog_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>