force-app/main/default/objects/CM_Backlog_Item__c/fields/Lifespan__c.field-meta.xml
<CustomField>
    <fullName>Lifespan__c</fullName>
    <description>Used by business to show how long the backlog item will live.
If an item is a lot of work and the lifespan is only three months, what is the value.</description>
    <inlineHelpText>Enter the expected lifespan of the delivered item (Permanent, 1-3 Months, Just until feature X is released, etc…)</inlineHelpText>
    <label>Lifespan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>