force-app/main/default/objects/CM_Backlog_Item__c/fields/Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>Manual_Steps__c</fullName>
    <description>Manual changes necessary to ensure complete deployment (not changes that are resolved by simply deploying related "components").  Examples of manual steps include:  Running scripts, setting profile permissions, deleting obsolete objects, etc.</description>
    <inlineHelpText>Manual changes necessary to ensure complete deployment (not changes that are resolved by simply deploying related "components").  Examples of manual steps include:  Running scripts, setting profile permissions, deleting obsolete objects, etc.</inlineHelpText>
    <label>Manual Deployment Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>