force-app/main/default/objects/CM_Backlog_Item__c/fields/Marketing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate the enhancement may affect the Insurance Exchange Marketing Team.</inlineHelpText>
    <label>Marketing Impact</label>
    <type>Checkbox</type>
</CustomField>