force-app/main/default/objects/CM_Backlog_Item__c/fields/Marketing_Impact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Impact_Summary__c</fullName>
    <label>Marketing Impact Summary</label>
    <type>TextArea</type>
</CustomField>