force-app/main/default/objects/CM_Backlog_Item__c/fields/Open_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Open_Bugs__c</fullName>
    <description>Number of Bugs Open against this backlog item.</description>
    <label>Open Bugs</label>
    <summaryFilterItems>
        <field>CM_Bug__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>CM_Bug__c.Backlog_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>