force-app/main/default/objects/CM_Backlog_Item__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>IE Requests</fullName>
            </value>
            <value>
                <fullName>Member Experience</fullName>
            </value>
            <value>
                <fullName>Membership Project</fullName>
            </value>
            <value>
                <fullName>New Products</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>POS Point of Sale Project</fullName>
            </value>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>Workflow Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>