force-app/main/default/objects/CM_Backlog_Item__c/fields/Origin_SAVED__c.field-meta.xml
<CustomField>
    <fullName>Origin_SAVED__c</fullName>
    <description>Saving the old origin field prior to backlog change BL-1081</description>
    <label>Origin SAVED</label>
    <length>100</length>
    <type>Text</type>
</CustomField>