force-app/main/default/objects/CM_Backlog_Item__c/fields/Parent_Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Backlog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent backlog item for grouping.</description>
    <label>Parent Backlog Item</label>
    <referenceTo>CM_Backlog_Item__c</referenceTo>
    <relationshipLabel>Child Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>