force-app/main/default/objects/CM_Backlog_Item__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula>if(  Burned_Hours__c > 0 &amp;&amp; Estimated_Hours__c > 0,   Burned_Hours__c  / Estimated_Hours__c , 0)</formula>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>