force-app/main/default/objects/CM_Backlog_Item__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>The product backlog contains rough estimates of both business value and development effort, these values are often stated in story points using a rounded Fibonacci sequence. Those estimates help the Product Owner to gauge the timeline and may influence ordering of backlog items.</description>
    <inlineHelpText>Rough estimates of development effort, these values are often stated in story points using a rounded Fibonacci sequence. Those estimates help the Product Owner to gauge the timeline.</inlineHelpText>
    <label>Points</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>89</fullName>
            </value>
            <value>
                <fullName>144</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>377</fullName>
            </value>
            <value>
                <fullName>610</fullName>
            </value>
            <value>
                <fullName>987</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>