force-app/main/default/objects/CM_Backlog_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project, if any, that the backlog item is related to.</description>
    <inlineHelpText>The project, if any, that the backlog item is related to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>