force-app/main/default/objects/CM_Backlog_Item__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phase of the project, if any, that the backlog item is related to.</description>
    <inlineHelpText>The phase of the project, if any, that the backlog item is related to.</inlineHelpText>
    <label>Project Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Phase__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>