force-app/main/default/objects/CM_Backlog_Item__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <description>Describe the enhancements/additions/changes for end user consumption.</description>
    <inlineHelpText>Describe the enhancements/additions/changes for end user consumption.</inlineHelpText>
    <label>Release Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>