force-app/main/default/objects/CM_Backlog_Item__c/fields/Reporting_Impact__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Member Experience - Metrics and Reporting Group would be affected by the change.</description>
    <inlineHelpText>Checked if there is a process change or data model change.</inlineHelpText>
    <label>Reporting Impact</label>
    <type>Checkbox</type>
</CustomField>