force-app/main/default/objects/CM_Backlog_Item__c/fields/Reporting_Impact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Impact_Summary__c</fullName>
    <inlineHelpText>Describe the impact or expected impact of the backlog item to the Member Experience - Metrics and Reporting group.</inlineHelpText>
    <label>Reporting Impact Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>