force-app/main/default/objects/CM_Backlog_Item__c/fields/Requested_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Requested_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please specify which sprint this backlog should be assigned.</inlineHelpText>
    <label>Requested Sprint</label>
    <referenceTo>CM_Sprint__c</referenceTo>
    <relationshipLabel>Backlog Items (Requested Sprint)</relationshipLabel>
    <relationshipName>Backlog_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>