force-app/main/default/objects/CM_Backlog_Item__c/fields/Smoke_Test_Steps__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test_Steps__c</fullName>
    <description>Describe the steps to validate that the attached functionality has been deployed properly.</description>
    <inlineHelpText>Describe the steps to validate that the attached functionality has been deployed properly.</inlineHelpText>
    <label>Smoke Test Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>