force-app/main/default/objects/CM_Backlog_Item__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which backlog items are assigned to each Sprint.  Not mandatory.</description>
    <label>Sprint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CM_Sprint__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <infoMessage>Please use an active sprint</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CM_Sprint__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>