force-app/main/default/objects/CM_Backlog_Item__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Calculation from the Status Field</description>
    <formula>/* Planning */
IF( OR( ISPICKVAL( Status__c, "Not Started"), ISPICKVAL( Status__c, "Defer next sprint"), ISPICKVAL( Status__c, "Defer Later")), "Planning", 

/* Development */
IF( OR( ISPICKVAL( Status__c, "Clarifying Req"),ISPICKVAL( Status__c, "Waiting On"),ISPICKVAL( Status__c, "In Progress"),ISPICKVAL( Status__c, "Ready to Demo")), "Development", 

/* Testing */
IF( OR( ISPICKVAL( Status__c, "Ready for QA"),ISPICKVAL( Status__c, "Passed QA"),ISPICKVAL( Status__c, "Ready for UAT"),ISPICKVAL( Status__c, "Passed UAT")), "Testing", 

/* Deployed */
IF( OR( ISPICKVAL( Status__c, "Deployed"),ISPICKVAL( Status__c, "Completed - Nothing to Deploy")), "Deployed", 

/* Rejected */
IF( ISPICKVAL( Status__c, "Rejected"), "Rejected", 

"N/A")))))</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>