force-app/main/default/objects/CM_Backlog_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Approved by Business</fullName>
            </value>
            <value>
                <fullName>Waiting On</fullName>
            </value>
            <value>
                <fullName>Clarifying Req</fullName>
            </value>
            <value>
                <fullName>Completed - Nothing to Deploy</fullName>
            </value>
            <value>
                <fullName>Developer-Ready</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Feedback Demo</fullName>
            </value>
            <value>
                <fullName>Ready to Demo</fullName>
            </value>
            <value>
                <fullName>Ready for QA Deploy</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>Passed QA / Ready for UAT Deploy</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>Passed UAT / Ready for Production Deploy</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Defer next sprint</fullName>
            </value>
            <value>
                <fullName>Defer Later</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>