force-app/main/default/objects/CM_Backlog_Item__c/fields/Technical_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complexity__c</fullName>
    <description>Level of Technical Complexity.</description>
    <inlineHelpText>Level of Technical Complexity.  
Low = Design is implied within the backlog item
Medium = Requires design by Technical Business Analyst
HIgh = Requires design by Advanced Developer</inlineHelpText>
    <label>Technical Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>