force-app/main/default/objects/CM_Backlog_Item__c/fields/Test_Burn_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Test_Burn_Hours_Remaining__c</fullName>
    <formula>IF(Test_Burned_Hours__c &lt; Test_Estimated_Hours__c, Test_Estimated_Hours__c - Test_Burned_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Burn Hours Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>