force-app/main/default/objects/CM_Backlog_Item__c/fields/Test_Burned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Test_Burned_Hours__c</fullName>
    <description>Hours burned by testing</description>
    <inlineHelpText>Hours burned by testing</inlineHelpText>
    <label>Test Burned Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>