force-app/main/default/objects/CM_Backlog_Item__c/fields/Test_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Test_Estimated_Hours__c</fullName>
    <description>Number of hours estimated for testing.</description>
    <inlineHelpText>Number of hours estimated for testing.</inlineHelpText>
    <label>Test Estimated Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>