force-app/main/default/objects/CM_Backlog_Item__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Use Case related to the backlog item.</inlineHelpText>
    <label>Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>