force-app/main/default/objects/CM_Backlog_Item__c/validationRules/BacklogItem_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>BacklogItem_Status_Check</fullName>
    <active>false</active>
    <description>Makes sure the Backlog Item has components before advancing status to Ready For QA or Ready For Deploy</description>
    <errorConditionFormula>AND(   ISPICKVAL(Category__c, 'Code'),
Component_Count__c  = 0 , 
     OR(ISPICKVAL(Status__c, 'Ready for QA'), 
            ISPICKVAL(Status__c, 'Passed QA/Done')))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please attach your code components before setting the status to either 'Ready for QA' or 'Passed QA/Done'.</errorMessage>
</ValidationRule>