force-app/main/default/objects/CM_Backlog_Item__c/listViews/Boomi_Technical_Backlog.listView-meta.xml
<ListView>
    <fullName>Boomi_Technical_Backlog</fullName>
    <columns>NAME</columns>
    <columns>BackLog_ID__c</columns>
    <columns>Jira_Ticket_ID__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog__c</field>
        <operation>equals</operation>
        <value>Boomi Technical Backlog</value>
    </filters>
    <label>Boomi Technical Backlog</label>
</ListView>