force-app/main/default/objects/CM_Backlog_Item__c/listViews/Jira_Xref.listView-meta.xml
<ListView>
    <fullName>Jira_Xref</fullName>
    <columns>NAME</columns>
    <columns>BackLog_ID__c</columns>
    <columns>Jira_Ticket_ID__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Jira_Ticket_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Jira Xref</label>
</ListView>